Fixed selector and z-index conflicts

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -78,7 +78,7 @@
 	position: absolute;
 	height: 3px;
 	width: 90%;
-	
+
 	top: 1rem;
 	left: 50%;
 	transform: translateX(-50%);
@@ -179,6 +179,7 @@
 	inset: 0 0 auto auto;
 	transform-origin: 0 0;
 	transform: translate(29.3%) rotate(45deg);
+	z-index: 21;
 }
 
 .logoContainer,
@@ -276,7 +277,7 @@
 	background-color: var(--smoke-gray);
 }
 
-.mainContainer .popupMask {
+.mainContainer > .landingPopup > .popupMask {
 	opacity: 1;
 	background-color: var(--offwhite);
 }
@@ -302,7 +303,7 @@
 	padding: clamp(1rem, 5vw, 2rem);
 }
 
-.mainContainer .popupContainer {
+.mainContainer > .landingPopup > .popupContainer {
 	width: 100%;
 	height: 100%;
 
